edits to the expressHW

--- a/SPAexpressHW/public/index.html
+++ b/SPAexpressHW/public/index.html
@@ -14,7 +14,7 @@
 <input type='text' id='hometown' class='bio' placeholder='Enter the Hometown' require></input>
 
 <input type='text' id='sign' class='bio' placeholder='Enter the Sign'></input require>
-<button>Submit</button>
+<button id='newPerson'>Submit</button>
 
 <script src='main.js'></script>
 
